fix right margin on mobile

--- a/_includes/css/grayscale.css
+++ b/_includes/css/grayscale.css
@@ -21,7 +21,10 @@ html {
     width: 100%;
     margin: 0px;
     padding: 0px;
+}
 
+.row {
+  margin-right: 0px !important;
 }
 
 h1,
